[MODFIN-433]. Include totals without expense class for expense-classes-totals